# Generative_AI

00_jupyter_notebook_in_docker/: compose.yaml
00_jupyter_notebook_in_docker/genai_01/: Dockerfile  README.md  pyproject.toml
00_jupyter_notebook_in_docker/genai_01/genai_01/: class_00.ipynb
01_openai_chat_completion/chat_completion/: .env_backup  README.md  pyproject.toml
01_openai_chat_completion/chat_completion/chat_completion/: main.ipynb
