[tool.poetry]
name = "chat-completion"
version = "0.1.0"
description = ""
authors = ["Em-Aar <mmrhaq@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.33.0"
ipykernel = "^6.29.4"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
